--- a/admin-login.html
+++ b/admin-login.html
@@ -10,8 +10,9 @@
     <div id="login-container">
       <form id="login-form" class="login-form">
         <img
+          class="login-img"
           src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp"
-          style="width: 185px"
+          style="width: 240px"
           alt="logo"
         />
         <h2>Admin Login</h2>
@@ -28,20 +29,28 @@
             />
           </div>
 
-          <button type="submit">Login</button>
+          <button class="login-btn" type="submit">Login</button>
         </div>
 
         <p id="error-message" class="error-message"></p>
       </form>
       <div class="login-text">
         <div>
-          <div class="">
+          <div class="login-texts">
             <h4 class="mb-4">We are more than just a company</h4>
             <p class="small mb-0">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
+              amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.
             </p>
           </div>
         </div>
