--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
               <a href="#testimonials" class="page-scroll">Testimonials</a>
             </li>
             <li><a href="#contact" class="page-scroll">Contact</a></li>
-            <li><a href="admin.html">Admin</a></li>
+            <li>
+              <a href="admin.html"><p class="admin-1">Admin</p></a>
+            </li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
