--- a/index.html
+++ b/index.html
@@ -197,12 +197,14 @@
               <h3>Executive serviced Self contain</h3>
               <p>
                 Executive serviced Self contain behind prime waters lekki phase
-                1 Rent (N2,800,000) Service charge N900,000)+ annual phcn The
-                owner wants 10 month rent now N2,324,313. (10 month) N750k
-                service charge (10 month) Monthly diesel deposit 80k Comes with
-                inverter save 700k Aircondition save 600k + cooker save 120k +
-                air extrator 100k Agency 10% Legal 5% Caution 100k Agency 230k
-                Legal N115k Total 3,519,000
+                1 Rent
+                <span style="color: red">(N2,800,000) </span> (N2,800,000)
+                Service charge N900,000)+ annual phcn The owner wants 10 month
+                rent now N2,324,313. (10 month) N750k service charge (10 month)
+                Monthly diesel deposit 80k Comes with inverter save 700k
+                Aircondition save 600k + cooker save 120k + air extrator 100k
+                Agency 10% Legal 5% Caution 100k Agency 230k Legal N115k Total
+                3,519,000
               </p>
             </div>
             <div class="property-icon">
@@ -266,7 +268,8 @@
                 ensuite Service Quarter. - Spacious - Top-quality finishing -
                 Jacuzzi - Secured estate - Private parking area/car port - Green
                 area - Exclusive compound Location: Road 58, Victoria Garden
-                City (VGC), Ikota, Lekki Price: N10,000,000
+                City (VGC), Ikota, Lekki Price:
+                <span style="color: red">N10,000,000</span>
               </p>
             </div>
             <div class="property-icon">
@@ -302,11 +305,12 @@
             <div class="service-desc">
               <h3>For Sale 4bedroom terrace duplex is 255 million</h3>
               <p>
-                For Sale 4bedroom terrace duplex is 255 million naira only
-                Property features includes: = Central Gymnasium = Central
-                swimming pool Central outdoor terrace for relaxation = fitted
-                kitchen = Oven = Microwave = Cooker = Smart sound system =
-                standby brand new generator
+                For Sale 4bedroom terrace duplex is 255 million
+                <span style="color: red">255 Million</span> naira only Property
+                features includes: = Central Gymnasium = Central swimming pool
+                Central outdoor terrace for relaxation = fitted kitchen = Oven =
+                Microwave = Cooker = Smart sound system = standby brand new
+                generator
               </p>
             </div>
             <div class="property-icon">
@@ -337,12 +341,22 @@
               <h3>Executive serviced Self contain</h3>
               <p>
                 Executive serviced Self contain behind prime waters lekki phase
-                1 Rent (N2,800,000) Service charge N900,000)+ annual phcn The
-                owner wants 10 month rent now N2,324,313. (10 month) N750k
-                service charge (10 month) Monthly diesel deposit 80k Comes with
-                inverter save 700k Aircondition save 600k + cooker save 120k +
-                air extrator 100k Agency 10% Legal 5% Caution 100k Agency 230k
-                Legal N115k Total 3,519,000
+                1 Rent <span style="color: red">N2,800,000</span> Service charge
+                <span style="color: red">N900,000</span> + annual phcn The owner
+                wants 10 month rent now.<span style="color: red"
+                  >N2,324,324.</span
+                >
+                (10 month) <span style="color: red">N750k</span> service charge
+                (10 month) Monthly diesel deposit 80k Comes with inverter save
+                <span style="color: red">N700k</span> Aircondition save
+                <span style="color: red">N600k</span> + cooker save
+                <span style="color: red">N120k</span> + air extrator
+                <span style="color: red">N100</span> k Agency 10% Legal 5%
+                Caution <span style="color: red">N100</span> Agency
+                <span style="color: red">N100k</span> Legal
+                <span style="color: red">N115k</span>
+                <span style="color: red">N115k</span> Total
+                <span style="color: red">N3.519,000</span>
               </p>
             </div>
             <div class="property-icon">
@@ -364,9 +378,10 @@
               <p>
                 Description: Open Plan commercial building suitable for club,
                 restaurant, fitness outfit or a supermarket. Location: Along New
-                market road, Oniru, Lagos Rent N35 million Term: 2 years munimum
-                Agency Fee: 10% Legal Fee: . We offer Nigerian property seekers
-                an easy way to find details of property.
+                market road, Oniru, Lagos Rent
+                <span style="color: red">N35 million</span> N35 million Term: 2
+                years munimum Agency Fee: 10% Legal Fee: . We offer Nigerian
+                property seekers an easy way to find details of property.
               </p>
             </div>
             <div class="property-icon">
@@ -417,7 +432,9 @@
                 ensuite Service Quarter. - Spacious - Top-quality finishing -
                 Jacuzzi - Secured estate - Private parking area/car port - Green
                 area - Exclusive compound Location: Road 58, Victoria Garden
-                City (VGC), Ikota, Lekki Price: N10,000,000
+                City (VGC), Ikota, Lekki Price:<span style="color: red"
+                  >N10,000,000</span
+                >
               </p>
             </div>
             <div class="property-icon">
@@ -439,10 +456,11 @@
               <p>
                 *DIRECT* *Studio room/apartment with open plan kitchen and tv
                 console* Emcel gardens, Orchid. 18hrs of electricity 24/7
-                security *Rent : 1.8M* Alc 10% each Sc 300k Mvc, Private Green
-                area - Exclusive We offer Nigerian property seekers an easy way
-                to find details of property. ervice Quarter. - Spacious -
-                Top-quality finishing
+                security *Rent : 1.8M*
+                <span style="color: red">N1.8 million</span> Alc 10% each Sc
+                300k Mvc, Private Green area - Exclusive We offer Nigerian
+                property seekers an easy way to find details of property. ervice
+                Quarter. - Spacious - Top-quality finishing
               </p>
             </div>
             <div class="property-icon">
@@ -462,11 +480,13 @@
             <div class="service-desc">
               <h3>For Sale 4bedroom terrace duplex is 255 million</h3>
               <p>
-                For Sale 4bedroom terrace duplex is 255 million naira only
-                Property features includes: = Central Gymnasium = Central
-                swimming pool Central outdoor terrace for relaxation = fitted
-                kitchen = Oven = Microwave = Cooker = Smart sound system =
-                standby brand new generator
+                For Sale 4bedroom terrace duplex is<span style="color: red"
+                  >N255</span
+                >
+                255 million naira only Property features includes: = Central
+                Gymnasium = Central swimming pool Central outdoor terrace for
+                relaxation = fitted kitchen = Oven = Microwave = Cooker = Smart
+                sound system = standby brand new generator
               </p>
             </div>
             <div class="property-icon">
