--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>WEALTH</title>
+    <title>FINDERS REAL ESTATE</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
@@ -76,8 +76,9 @@
             <span class="icon-bar"></span> <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand page-scroll" href="#page-top">Wealth</a>
-          <div class="phone"><span>Call Today</span>320-123-4321</div>
+          <a class="navbar-brand page-scroll" href="#page-top"
+            >FINDERS REAL ESTATE</a
+          >
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -108,11 +109,8 @@
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2 intro-text">
-                <h1>Helping You Find More Than Just a House—A Home</h1>
-                <p>
-                  Connecting People to the Spaces They Love. Experience Real
-                  Estate, Redefined
-                </p>
+                <h1>FINDERS REAL ESTATE- FINDING YOU A HOME YOU DESERVE</h1>
+
                 <a href="#about" class="btn btn-custom btn-lg page-scroll"
                   >Learn More</a
                 >
@@ -122,25 +120,7 @@
         </div>
       </div>
     </header>
-    <!-- Get Touch Section -->
-    <div id="get-touch">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12 col-md-6 col-md-offset-1">
-            <h3>Cost for your home renovation project</h3>
-            <p>
-              Get started today and complete our form to request your free
-              estimate
-            </p>
-          </div>
-          <div class="col-xs-12 col-md-4 text-center">
-            <a href="#contact" class="btn btn-custom btn-lg page-scroll"
-              >Free Estimate</a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
+    ]
     <!-- About Section -->
     <div id="about">
       <div class="container">
@@ -152,30 +132,16 @@
             <div class="about-text">
               <h2>Who We Are</h2>
               <p>
-                We strive to create a world where finding your perfect home or
-                property is no longer a challenge. Our vision is to become the
-                most trusted and innovative real estate platform, blending
-                technology, market expertise, and personalized service.
+                At Finders Real Estate, we are dedicated to transforming the
+                home search experience by prioritizing your needs and
+                aspirations. Our mission is to help you find the perfect home
+                that fits your lifestyle and budget. With a passionate team of
+                real estate professionals, innovative technology, and an
+                unwavering commitment to customer satisfaction, we ensure that
+                your journey to finding a home you deserve is seamless and
+                rewarding. Welcome to Finders Real Estate, where your dream home
+                becomes a reality.
               </p>
-              <h3>Why Choose Us?</h3>
-              <div class="list-style">
-                <div class="col-lg-6 col-sm-6 col-xs-12">
-                  <ul>
-                    <li>Years of Experience</li>
-                    <li>Fully Insured</li>
-                    <li>Cost Control Experts</li>
-                    <li>100% Satisfaction Guarantee</li>
-                  </ul>
-                </div>
-                <div class="col-lg-6 col-sm-6 col-xs-12">
-                  <ul>
-                    <li>Trusted Advisors:</li>
-                    <li>Satisfied Customers</li>
-                    <li>Seamless Transactions</li>
-                    <li>Affordable Pricing</li>
-                  </ul>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -189,7 +155,7 @@
     <div id="services">
       <div class="container">
         <div class="section-title">
-          <h2>Property</h2>
+          <h2>Properties</h2>
         </div>
         <div class="row">
           <div class="col-md-4">
@@ -329,7 +295,7 @@
     <div id="services">
       <div class="container">
         <div class="section-title">
-          <h2>More Propertys</h2>
+          <h2>More Properties</h2>
         </div>
         <div class="row">
           <div class="col-md-4">
@@ -512,76 +478,20 @@
           <div class="col-md-4">
             <div class="testimonial">
               <div class="testimonial-image">
-                <img src="img/testimonials/01.jpg" alt="" />
-              </div>
-              <div class="testimonial-content">
-                <p>
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
-                  sed dapibus leo nec ornare diam sedasd commodo nibh ante
-                  facilisis bibendum dolor feugiat at."
-                </p>
-                <div class="testimonial-meta">- John Doe</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="testimonial">
-              <div class="testimonial-image">
-                <img src="img/testimonials/02.jpg" alt="" />
-              </div>
-              <div class="testimonial-content">
-                <p>
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
-                  sed dapibus leo nec ornare diam sedasd commodo nibh ante
-                  facilisis."
-                </p>
-                <div class="testimonial-meta">- Johnathan Doe</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="testimonial">
-              <div class="testimonial-image">
-                <img src="img/testimonials/03.jpg" alt="" />
-              </div>
-              <div class="testimonial-content">
-                <p>
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
-                  sed dapibus leo nec ornare diam sedasd commodo nibh ante
-                  facilisis bibendum dolor feugiat at."
-                </p>
-                <div class="testimonial-meta">- John Doe</div>
-              </div>
-            </div>
-          </div>
-          <div class="row"></div>
-          <div class="col-md-4">
-            <div class="testimonial">
-              <div class="testimonial-image">
-                <img src="img/testimonials/04.jpg" alt="" />
-              </div>
-              <div class="testimonial-content">
-                <p>
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
-                  sed dapibus leo nec ornare diam sedasd commodo nibh ante
-                  facilisis bibendum dolor feugiat at."
-                </p>
-                <div class="testimonial-meta">- Johnathan Doe</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="testimonial">
-              <div class="testimonial-image">
                 <img src="img/testimonials/05.jpg" alt="" />
               </div>
               <div class="testimonial-content">
                 <p>
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
-                  sed dapibus leo nec ornare diam sedasd commodo nibh ante
-                  facilisis bibendum dolor feugiat at."
+                  I had the most wonderful experience with Finders Real Estate!
+                  The platform made finding my dream home so easy and
+                  stress-free. The user interface is intuitive, and I was able
+                  to filter through properties that matched my exact criteria.
+                  The customer support was outstanding—they were always there to
+                  answer my questions and guide me through the process. I
+                  couldn't be happier with my new home and the excellent service
+                  I received!"
                 </p>
-                <div class="testimonial-meta">- John Doe</div>
+                <div class="testimonial-meta">SEUN OJO</div>
               </div>
             </div>
           </div>
@@ -592,11 +502,17 @@
               </div>
               <div class="testimonial-content">
                 <p>
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
-                  sed dapibus leo nec ornare diam sedasd commodo nibh ante
-                  facilisis."
+                  Finders Real Estate exceeded all my expectations. From the
+                  moment I signed up, I knew I was in good hands. The
+                  comprehensive property listings and detailed descriptions
+                  helped me find the perfect rental property for my family. The
+                  added feature of virtual tours made it easy to explore
+                  properties without having to visit them in person. The team at
+                  Finders Real Estate was professional, responsive, and truly
+                  cared about helping me find a home that suits my needs. Highly
+                  recommend!"
                 </p>
-                <div class="testimonial-meta">- Johnathan Doe</div>
+                <div class="testimonial-meta">DAVID NWAIFO</div>
               </div>
             </div>
           </div>
@@ -664,15 +580,15 @@
           <div class="contact-item">
             <h4>Contact Info</h4>
             <p>
-              <span>Address</span>4321 California St,<br />
-              San Francisco, CA 12345
+              <span>Address</span> NO 14, Berry street,<br />
+              Jakande Close, Ikeja, Lagos
             </p>
           </div>
           <div class="contact-item">
-            <p><span>Phone</span> +1 123 456 1234</p>
+            <p><span>Phone</span> +2347066448240</p>
           </div>
           <div class="contact-item">
-            <p><span>Email</span> info@company.com</p>
+            <p><span>Email</span> findersrealestate@gmail.com</p>
           </div>
         </div>
         <div class="col-md-12">
