--- a/login.html
+++ b/login.html
@@ -3,47 +3,121 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Account System</title>
-    <link rel="stylesheet" href="css/sing-up.css" />
+    <title>Property Management</title>
+
+    <style>
+      .hidden {
+        display: none;
+      }
+      .container {
+        max-width: 600px;
+        margin: 20px auto;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+      }
+      form {
+        display: flex;
+        flex-direction: column;
+      }
+      label {
+        margin-bottom: 5px;
+        font-weight: bold;
+      }
+      input,
+      button {
+        margin-bottom: 15px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+      }
+      button {
+        background-color: #007bff;
+        color: #fff;
+        cursor: pointer;
+      }
+      button:hover {
+        background-color: #0056b3;
+      }
+      .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        gap: 15px;
+        margin-top: 20px;
+      }
+      .gallery img {
+        width: 10%;
+        border-radius: 5px;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
-      <!-- Sign Up Section -->
-      <div id="signup-section">
+      <!-- Create Account -->
+      <div id="create-account-section">
         <h2>Create Account</h2>
-        <form id="signup-form">
-          <label for="signup-username">Username:</label>
-          <input type="text" id="signup-username" name="username" required />
-
-          <label for="signup-email">Email:</label>
-          <input type="email" id="signup-email" name="email" required />
-
-          <label for="signup-password">Password:</label>
-          <input
-            type="password"
-            id="signup-password"
-            name="password"
-            required
-          />
-
-          <button type="submit">Sign Up</button>
+        <form id="create-account-form">
+          <label for="username">Username:</label>
+          <input type="text" id="username" required />
+          <label for="email">Email:</label>
+          <input type="email" id="email" required />
+          <label for="password">Password:</label>
+          <input type="password" id="password" required />
+          <button type="submit">Create Account</button>
         </form>
+        <p>
+          Already have an account?
+          <a href="#" onclick="showLogin()">Login here</a>
+        </p>
       </div>
 
-      <!-- Login Section -->
-      <div id="login-section">
+      <!-- Login -->
+      <div id="login-section" class="hidden">
         <h2>Login</h2>
         <form id="login-form">
-          <label for="login-email">Email:</label>
-          <input type="email" id="login-email" name="email" required />
-
+          <label for="login-username">Username:</label>
+          <input type="text" id="login-username" required />
           <label for="login-password">Password:</label>
-          <input type="password" id="login-password" name="password" required />
-
+          <input type="password" id="login-password" required />
           <button type="submit">Login</button>
         </form>
+        <p>
+          Forgot password?
+          <a href="#" onclick="showForgotPassword()">Reset here</a>
+        </p>
+        <p>
+          Don't have an account?
+          <a href="#" onclick="showCreateAccount()">Create one</a>
+        </p>
+      </div>
+
+      <!-- Forgot Password -->
+      <div id="forgot-password-section" class="hidden">
+        <h2>Forgot Password</h2>
+        <form id="forgot-password-form">
+          <label for="reset-email">Email:</label>
+          <input type="email" id="reset-email" required />
+          <button type="submit">Reset Password</button>
+        </form>
+        <p>Go back to <a href="#" onclick="showLogin()">Login</a></p>
+      </div>
+
+      <!-- Post Property -->
+      <div id="post-property-section" class="hidden">
+        <h2>Post Property</h2>
+        <form id="property-form">
+          <label for="property-image">Upload Image:</label>
+          <input type="file" id="property-image" accept="image/*" />
+
+          <button type="submit">Post Property</button>
+        </form>
+
+        <div id="current-properties"></div>
+
+        <button onclick="logout()">Logout</button>
       </div>
     </div>
+
     <script src="login.js"></script>
   </body>
 </html>
