--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
 
     <div id="services">
       <div class="container">
-        <h3 style="margin-top: 60px">Newly Uploaded Properties</h3>
+        <a href="login.html"
+          ><h3 style="margin-top: 60px">Uploaded Properties Here</h3></a
+        >
         <div
           id="property-grid"
           class="container featured-properties property-grid"
