--- a/all-properties.html
+++ b/all-properties.html
@@ -291,7 +291,7 @@
 
     <div id="services">
       <div class="container">
-        <h3 style="margin-top: 60px">Newly Uploaded Properties</h3>
+        <h3 style="margin-top: 60px">Uploaded Properties Here</h3>
         <div
           id="property-grid"
           class="container featured-properties property-grid"
