--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
       <div class="intro">
         <div class="overlay">
           <div class="container">
-            
             <div class="row">
               <div class="col-md-8 col-md-offset-2 intro-text">
                 <h1 style="font-size: 35px">
@@ -151,7 +150,7 @@
     <div id="services">
       <div class="container">
         <a href="login.html"
-          ><h3 style="margin-top: 60px">Uploaded Properties Here</h3></a
+          ><h3 style="margin-top: 60px">Upload Properties Here</h3></a
         >
         <div
           id="property-grid"
