--- a/index.html
+++ b/index.html
@@ -91,7 +91,13 @@
             </li>
             <li><a href="#contact" class="page-scroll">Contact</a></li>
             <li>
-              <a href="login.html"> <p class="login">Login</p></a>
+              <a href="login.html">
+                <div class="login" style="font-size: 10px">
+                  <div style="margin-bottom: -5px">Sign Up</div>
+                  <span style="color: rgb(32, 33, 33)">or</span>
+                  <div style="margin-top: -6px">Login</div>
+                </div></a
+              >
             </li>
           </ul>
         </div>
@@ -662,14 +668,7 @@
       </div>
     </div>
     <!-- Footer Section -->
-    <div id="footer">
-      <div class="container text-center">
-        <p>
-          &copy; 2017 INNOVA. Design by
-          <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a>
-        </p>
-      </div>
-    </div>
+    <div id="footer"></div>
     <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/SmoothScroll.js"></script>
