--- a/login.html
+++ b/login.html
@@ -144,7 +144,7 @@
 
         <button onclick="logout()">Logout</button
         ><a href="index.html" class="btn btn-custom btn-lg page-scroll"
-          >Hope Page</a
+          >Home Page</a
         >
       </div>
     </div>
