--- a/all-properties.html
+++ b/all-properties.html
@@ -317,7 +317,7 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
+              <div>3 Bathrooms</div>
               <div>Toilet</div>
               <div>Parking Space</div>
             </div>
@@ -338,7 +338,7 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
+              <div>2 Bathrooms</div>
               <div>Toilet</div>
               <div>Parking Space</div>
             </div>
@@ -359,7 +359,7 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
+              <div>4 Bathrooms</div>
               <div>Toilet</div>
               <div>Parking Space</div>
             </div>
