--- a/signup.html
+++ b/signup.html
@@ -83,6 +83,24 @@
     <div class="container">
       <!-- Create Account -->
       <div id="create-account-section">
+        <h2>Create Account</h2>
+        <form id="create-account-form">
+          <label for="username">Username:</label>
+          <input type="text" id="username" required />
+          <label for="email">Email:</label>
+          <input type="email" id="email" required />
+          <label for="password">Password:</label>
+          <input type="password" id="password" required />
+          <button type="submit">Create Account</button>
+        </form>
+        <p>
+          Already have an account?
+          <a href="#" onclick="showLogin()">Login here</a>
+        </p>
+      </div>
+
+      <!-- Login -->
+      <div id="login-section" class="hidden">
         <h2>Login</h2>
         <form id="login-form">
           <label for="login-username">Username:</label>
@@ -97,25 +115,7 @@
         </p>
         <p>
           Don't have an account?
-          <a href="signup.html">Create one</a>
-        </p>
-      </div>
-
-      <!-- Login -->
-      <div id="login-section" class="hidden">
-        <h2>Create Account</h2>
-        <form id="create-account-form">
-          <label for="username">Username:</label>
-          <input type="text" id="username" required />
-          <label for="email">Email:</label>
-          <input type="email" id="email" required />
-          <label for="password">Password:</label>
-          <input type="password" id="password" required />
-          <button type="submit">Create Account</button>
-        </form>
-        <p>
-          Already have an account?
-          <a href="#" onclick="showLogin()">Login here</a>
+          <a href="#" onclick="showCreateAccount()">Create one</a>
         </p>
       </div>
 
