update the numbers of bathrooms, toilets and parking spaces availble for each apartment

--- a/all-properties.html
+++ b/all-properties.html
@@ -382,9 +382,9 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>4 Bathrooms</div>
+              <div>3 Toilets</div>
+              <div>4 Parking Spaces</div>
             </div>
           </div>
           <div class="col-md-4">
@@ -402,9 +402,9 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>3 Bathrooms</div>
+              <div>4 Toilets</div>
+              <div>2 Parking Spaces</div>
             </div>
           </div>
           <div class="col-md-4">
@@ -423,9 +423,9 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>5 Bathrooms</div>
+              <div>5 Toilets</div>
+              <div>3 Parking Spaces</div>
             </div>
           </div>
         </div>
@@ -469,9 +469,9 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>3 Bathrooms</div>
+              <div>4 Toilets</div>
+              <div>3 Parking Spaces</div>
             </div>
           </div>
           <div class="col-md-4">
@@ -494,9 +494,9 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>4 Bathrooms</div>
+              <div>3 Toilets</div>
+              <div>4 Parking Spaces</div>
             </div>
           </div>
           <div class="col-md-4">
@@ -519,9 +519,9 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>3 Bathrooms</div>
+              <div>3 Toilets</div>
+              <div>2 Parking Spaces</div>
             </div>
           </div>
         </div>
@@ -547,9 +547,9 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>5 Bathrooms</div>
+              <div>5 Toilets</div>
+              <div>2 Parking Spaces</div>
             </div>
           </div>
           <div class="col-md-4">
@@ -573,9 +573,9 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>3 Bathrooms</div>
+              <div>4 Toilets</div>
+              <div>3 Parking Spaces</div>
             </div>
           </div>
           <div class="col-md-4">
