--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
               <h3>Apartment for Rent</h3>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>3 Bathrooms</div>
+              <div>3 Toilets</div>
+              <div>3 Parking Spaces</div>
             </div>
             <a
               href="all-properties.html"
@@ -215,9 +215,9 @@
               <h3>Apartment for Sale</h3>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>4 Bathrooms</div>
+              <div>3 Toilets</div>
+              <div>3 Parking Spaces</div>
             </div>
             <a
               href="all-properties.html"
@@ -235,9 +235,9 @@
               <h3>Apartment for Rent</h3>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>4 Bathrooms</div>
+              <div>3 Toilets</div>
+              <div>3 Parking Spaces</div>
             </div>
             <a
               href="all-properties.html"
@@ -253,9 +253,9 @@
               <h3>Apartment for Rent</h3>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>2 Bathrooms</div>
+              <div>3 Toilets</div>
+              <div>4 Parking Spaces</div>
             </div>
             <a
               href="all-properties.html"
@@ -271,9 +271,9 @@
               <h3>Apartment for Sale</h3>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>3 Bathrooms</div>
+              <div>3 Toilets</div>
+              <div>4 Parking Spaces</div>
             </div>
             <a
               href="all-properties.html"
@@ -317,9 +317,9 @@
               <h3>Apartment for Sale</h3>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>4 Bathrooms</div>
+              <div>3 Toilets</div>
+              <div>3 Parking Spaces</div>
             </div>
             <a
               href="all-properties.html"
@@ -339,9 +339,9 @@
               <h3>Apartment for Rent</h3>
             </div>
             <div class="property-icon">
-              <div>Bathroom</div>
-              <div>Toilet</div>
-              <div>Parking Space</div>
+              <div>4 Bathrooms</div>
+              <div>3 Toilets</div>
+              <div>4 Parking Spaces</div>
             </div>
             <a
               href="all-properties.html"
