update: modify the spelling for bathroom

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>3 Bethroom</div>
+              <div>3 Bathroom</div>
               <div>3 Toilet</div>
               <div>2 Parking Space</div>
             </div>
@@ -415,7 +415,7 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>5 Bethroom</div>
+              <div>5 Bathroom</div>
               <div>8 Toilet</div>
               <div>10 Parking Space</div>
             </div>
@@ -440,7 +440,7 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>20 Bethroom</div>
+              <div>20 Bathroom</div>
               <div>20 Toilet</div>
               <div>15 Parking Space</div>
             </div>
@@ -468,7 +468,7 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>5 Bethroom</div>
+              <div>5 Bathroom</div>
               <div>20 Toilet</div>
               <div>15 Parking Space</div>
             </div>
@@ -494,7 +494,7 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>20 Bethroom</div>
+              <div>20 Bathroom</div>
               <div>20 Toilet</div>
               <div>15 Parking Space</div>
             </div>
@@ -520,7 +520,7 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>4 Bethroom</div>
+              <div>4 Bathroom</div>
               <div>5 Toilet</div>
               <div>5 Parking Space</div>
             </div>
