--- a/all-properties.html
+++ b/all-properties.html
@@ -143,7 +143,7 @@
                     </p>
                   </div>
                   <div class="property-icon">
-                    <div>Bethroom</div>
+                    <div>Bathroom</div>
                     <div>Toilet</div>
                     <div>Parking Space</div>
                   </div>
@@ -169,7 +169,7 @@
                     </p>
                   </div>
                   <div class="property-icon">
-                    <div>Bethroom</div>
+                    <div>Bathroom</div>
                     <div>Toilet</div>
                     <div>Parking Space</div>
                   </div>
@@ -194,7 +194,7 @@
                     </p>
                   </div>
                   <div class="property-icon">
-                    <div>Bethroom</div>
+                    <div>Bathroom</div>
                     <div>Toilet</div>
                     <div>Parking Space</div>
                   </div>
@@ -221,7 +221,7 @@
                     </p>
                   </div>
                   <div class="property-icon">
-                    <div>Bethroom</div>
+                    <div>Bathroom</div>
                     <div>Toilet</div>
                     <div>Parking Space</div>
                   </div>
@@ -248,7 +248,7 @@
                     </p>
                   </div>
                   <div class="property-icon">
-                    <div>Bethroom</div>
+                    <div>Bathroom</div>
                     <div>Toilet</div>
                     <div>Parking Space</div>
                   </div>
@@ -276,7 +276,7 @@
                     </p>
                   </div>
                   <div class="property-icon">
-                    <div>Bethroom</div>
+                    <div>Bathroom</div>
                     <div>Toilet</div>
                     <div>Parking Space</div>
                   </div>
@@ -599,7 +599,7 @@
               </p>
             </div>
             <div class="property-icon">
-              <div>Bethroom</div>
+              <div>Bathroom</div>
               <div>Toilet</div>
               <div>Parking Space</div>
             </div>
