add more values to the number of bathrooms, toilets and parking spaces

--- a/all-properties.html
+++ b/all-properties.html
@@ -143,9 +143,9 @@
                     </p>
                   </div>
                   <div class="property-icon">
-                    <div>Bathroom</div>
-                    <div>Toilet</div>
-                    <div>Parking Space</div>
+                    <div>3 Bathrooms</div>
+                    <div>2 Toilets</div>
+                    <div>3 Parking Spaces</div>
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -169,9 +169,9 @@
                     </p>
                   </div>
                   <div class="property-icon">
-                    <div>Bathroom</div>
-                    <div>Toilet</div>
-                    <div>Parking Space</div>
+                    <div>2 Bathrooms</div>
+                    <div>2 Toilets</div>
+                    <div>3 Parking Spaces</div>
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -194,9 +194,9 @@
                     </p>
                   </div>
                   <div class="property-icon">
-                    <div>Bathroom</div>
-                    <div>Toilet</div>
-                    <div>Parking Space</div>
+                    <div>4 Bathrooms</div>
+                    <div>4 Toilets</div>
+                    <div>3 Parking Spaces</div>
                   </div>
                 </div>
               </div>
@@ -221,7 +221,7 @@
                     </p>
                   </div>
                   <div class="property-icon">
-                    <div>Bathroom</div>
+                    <div>3 Bathrooms</div>
                     <div>Toilet</div>
                     <div>Parking Space</div>
                   </div>
